# zq

./: .gitignore  CMakeLists.txt  CREDITS.md  MANIFEST.in  README.md  README.txt  setup.py
Documentation/: README.md
Documentation/LibraryOfUsefulQueries/Hosts/: show_all_hosts_which_do_have_proxy_config.zql
Documentation/ReadMap/: README.md
Documentation/ReleaseNotes/: README.md  ReleaseNote_0.2.md  ReleaseNote_0.3.md  ReleaseNote_0.4.md  ReleaseNote_0.5.md  ReleaseNote_0.6.md  ReleaseNote_0.7.md
Documentation/RoadMap/: README.md  Release_0.6.md  Release_0.7.md  Release_0.8.md
cmake/: ReplicatePythonSourceTree.cmake  UseCython.cmake  zq.cmake
etc/: args.cfg  bootstrap.zql
etc/bootstrap/: bootstrap.zql
etc/default/: localzabbix.ini  localzabbix.json  localzabbix2.ini
examples/: all_hosts  custom_value_not_in_the_stack.zql  playing_with_stack_example_of_peeking.zql  show_all_hosts_as_json.zql
modules/: CheetahTemplate.md  CheetahTemplate.py  Demo.py  README.md  Version.py
querylib/: DeleteHostGroup.zql  DisplayStack.zql  LoopDemo1.zql  ReportError.zql  ReportOk.zql  SelectHostgroup.zql
templates/: hostgroups.tpl
zq/: CMakeLists.txt  __init__.py  zq.pyx  zq_args.pyx  zq_bjq.pyx  zq_cache_of_files.pyx  zq_cfg.pyx  zq_clear.pyx  zq_cmd.pyx  zq_cmd_batch.pyx  zq_cmd_eval.pyx  zq_cmd_exec.pyx  zq_cmd_query.pyx  zq_constants.pyi  zq_env.pyx  zq_env_modcache.pyx  zq_expiringdict.pyx  zq_ext_gen.pyx  zq_ext_time.pyx  zq_func.pyx  zq_lib.pyx  zq_modules.pyx  zq_pyzabbix.pyx  zq_query.pyx  zq_query_application.pyx  zq_query_create.pyx  zq_query_create_host_supplimental.pyx  zq_query_delete.pyx  zq_query_display.pyx  zq_query_extern.pyx  zq_query_filters.pyx  zq_query_group.pyx  zq_query_history.pyx  zq_query_join.pyx  zq_query_link.pyx  zq_query_logic.pyx  zq_query_loop.pyx  zq_query_new.pyx  zq_query_output.pyx  zq_query_query.pyx  (+11 more)
