CMAKE_MINIMUM_REQUIRED( VERSION 2.8.5 )
set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ../cmake )
FILE(GLOB ALL_MY_CIRCUIT "*.pyx")


EXECUTE_PROCESS( COMMAND python -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)

INCLUDE( UseCython )
INCLUDE( zq )

SET(CYTHON_FLAGS ${CYTHON_FLAGS} "-I${CLIPS6_BUILDLIBRARY_PATH}/include")
SET(CYTHON_FLAGS ${CYTHON_FLAGS} "-I../include")
SET(CYTHON_FLAGS ${CYTHON_FLAGS} "-I.")


SET_SOURCE_FILES_PROPERTIES(
  ${CYTHON_CMAKE_EXAMPLE_SOURCE_DIR}/zq/zq.pyx
  PROPERTIES CYTHON_IS_CXX FALSE )
SET_SOURCE_FILES_PROPERTIES(
  ${CYTHON_CMAKE_EXAMPLE_SOURCE_DIR}/src/zql.pyx
  PROPERTIES CYTHON_IS_CXX FALSE )






# Multi-file cython modules do not appear to be working at the moment.
CYTHON_ADD_MODULE( zq zq.pyx )
CYTHON_ADD_STANDALONE_EXECUTABLE( zql MAIN_MODULE zql.pyx  )

INSTALL(FILES zq.so ${CMAKE_CURRENT_SOURCE_DIR}/zq.so DESTINATION ${PYTHON_SITE_PACKAGES} )
INSTALL(FILES zql
    ${CMAKE_CURRENT_SOURCE_DIR}/zql
    DESTINATION ${CLIPS6_CLIPSBIN_PATH}
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
                GROUP_EXECUTE GROUP_READ
                WORLD_EXECUTE WORLD_READ
)


ADD_CUSTOM_TARGET(zq_module DEPENDS ${PYTHON_SITE_PACKAGES}/zq.so)
ADD_CUSTOM_TARGET(_zq DEPENDS zql)

# Add dependencies
ADD_DEPENDENCIES(zq_module zq.pyx ${ALL_MY_CIRCUIT})
ADD_DEPENDENCIES(_zq zql.pyx zq.pyx ${ALL_MY_CIRCUIT})





